force-app/main/default/objects/openq__Sentiment_Score_Preferences__c/openq__Sentiment_Score_Preferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Sentiment Score Preferences</label>
</CustomObject>