force-app/main/default/objects/openq__Sentiment_Score_Preferences__c/fields/openq__Display_Country_Score__c.field-meta.xml
<CustomField>
    <fullName>openq__Display_Country_Score__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Country Score</label>
    <type>Checkbox</type>
</CustomField>