force-app/main/default/objects/openq__Sentiment_Score_Preferences__c/fields/openq__Is_Show_All__c.field-meta.xml
<CustomField>
    <fullName>openq__Is_Show_All__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Show All</label>
    <type>Checkbox</type>
</CustomField>