force-app/main/default/objects/openq__Sentiment_Score_Preferences__c/fields/openq__Is_Show_Month__c.field-meta.xml
<CustomField>
    <fullName>openq__Is_Show_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show Month</label>
    <type>Checkbox</type>
</CustomField>