force-app/main/default/objects/openq__Sentiment_Score_Preferences__c/fields/openq__To_Date__c.field-meta.xml
<CustomField>
    <fullName>openq__To_Date__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>